rationalise blog post YAML

--- a/posts/_metadata.yml
+++ b/posts/_metadata.yml
@@ -1,7 +1,7 @@
 about:
   template: marquee
   links:
-    - text: "{{< fa brands bluesky >}} Bluesky"
+    - text: "{{< fa brands bluesky >}} BlueSky"
       href: https://bsky.app/profile/sipbscompbiol.bsky.social
     - icon: github
       text: Github
